[package]
authors = ['LB7666 <acking-you@foxmail.com>']
description = 'Provides universal stream for TCP and UDP traffic and custom DNS resolution service'
edition = '2021'
homepage = 'https://github.com/acking-you/uni-stream'
license = 'MIT'
name = 'uni-stream'
version = '0.1.0'
keywords = ["stream", "udp", "tcp", "ip", "dns"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
hashbrown = "0.14.3"
tracing = "0.1.40"
tokio = { version = "1.36.0", features = [
    "rt",
    "sync",
    "net",
    "macros",
    "io-util",
] }
futures = "0.3.30"
flume = { version = "0.11.0", default-features = false, features = ["async"] }
once_cell = "1.18.0"
trust-dns-resolver = "0.23.2"

[features]
default = ["udp-timeout"]
udp-timeout = []
